# gradio-droplet

./: .envrc  .gitignore  .gitmessage  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: COMMIT_CONVENTION.md  DEPENDENCY_MANAGEMENT.md  DIRENV.md  DIRENV_TECHNICAL.md  PRECOMMIT_CACHE.md  PRECOMMIT_FIX.md  QUICKSTART.md  README.md  SCRIPTS_GUIDE.md  TROUBLESHOOTING.md  UPDATE_GUIDE.md  VERSION_HISTORY.md
examples/: app.py  demo.py  dev_server.py
gradio_droplet/: __init__.py
scripts/: run_dev_server.sh  setup_commit_hooks.sh  update_deps.sh
tests/: __init__.py  test_basic.py
